<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPBebidas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="338dp">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="142dp"
            android:layout_marginBottom="300dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="17dp"
                        android:layout_marginEnd="140dp"
                        android:text="@string/jugo1"
                        android:textAlignment="center"
                        android:textColor="#040404"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="49dp"
                        android:layout_marginEnd="138dp"
                        android:text="@string/jugod1_2"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="184dp"
                        android:layout_marginTop="88dp"
                        android:layout_marginEnd="159dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/jugo1_3"
                        android:textAlignment="center"
                        android:textColor="#151515"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:textSize="1sp" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="87dp"
                        android:layout_height="120dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="322dp"
                        android:layout_marginBottom="7dp"
                        app:srcCompat="@drawable/jujo330" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="126dp"
            android:fontFamily="@font/baloo"
            android:text="@string/Bebidas"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="409dp"
            android:layout_height="142dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="17dp"
                        android:layout_marginEnd="140dp"
                        android:text="@string/jugo1"
                        android:textAlignment="center"
                        android:textColor="#040404"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="49dp"
                        android:layout_marginEnd="138dp"
                        android:text="@string/jugod1_2"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="184dp"
                        android:layout_marginTop="88dp"
                        android:layout_marginEnd="159dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/jugo1_3"
                        android:textAlignment="center"
                        android:textColor="#151515"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:textSize="1sp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="87dp"
                        android:layout_height="120dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="322dp"
                        android:layout_marginBottom="7dp"
                        app:srcCompat="@drawable/jugo1l" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>